# cpp-przykladowe-kolokwium

./: CMakeLists.txt  Instrukcja.md  README.md
include/: zad1.hpp  zad2.hpp  zad3.hpp  zad4.hpp  zad5.hpp
solution/: zad1.hpp  zad2.hpp  zad3.hpp  zad4.hpp  zad5.hpp
src/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
